--- a/src/flashplayerswitcher/FlashPlayerSwitcher.mxml
+++ b/src/flashplayerswitcher/FlashPlayerSwitcher.mxml
@@ -35,6 +35,6 @@
 					text="Flash Player Switcher makes use of '~/Library/Internet Plug-Ins/'. No systemwide Flash Player plugin will be overwritten."/>
 	</s:Group>
 	<view:InstalledVersionListing x="429" y="177" width="249" height="200"/>
-	<view:FlashplayerListing id="storage" x="26" y="176" />
+	<view:PluginStorageListing id="storage" x="26" y="176" />
 	<view:PluginDownloadList id="download" x="26" y="176" visible="false"/>
 </s:WindowedApplication>
