--- a/src/flashplayerswitcher/view/PreferencesWindow.mxml
+++ b/src/flashplayerswitcher/view/PreferencesWindow.mxml
@@ -2,42 +2,12 @@
 <s:Window xmlns:fx="http://ns.adobe.com/mxml/2009"
           xmlns:s="library://ns.adobe.com/flex/spark"
           xmlns:mx="library://ns.adobe.com/flex/mx"
+		  xmlns:preferences="flashplayerswitcher.view.preferences.*"
           backgroundColor="#F4F4F2"
           width="575" height="430"
           showStatusBar="false" maximizable="false" minimizable="false" resizable="false" 
           title="Preferences">
-	<fx:Script>
-		<![CDATA[
-			import mx.collections.ArrayCollection;
-			
-			[Bindable]
-			public var pluginStorageLocations:ArrayCollection = new ArrayCollection([{label: "Application Storage"}, {label: "Other..."}]);
-			
-			[Bindable]
-			public var allowEditing:Boolean = true;
-			
-			private function onAllowEditingChanged(e:Event):void
-			{
-				
-			}
-		]]>
-	</fx:Script>
 	<s:VGroup left="15" top="15" right="15" bottom="15" width="100%">
-		<s:Panel width="100%" dropShadowVisible="false" title="Storage">
-			<s:VGroup paddingTop="15" width="100%">
-				<s:HGroup width="100%">
-					<s:Group width="40%">
-						<s:Label text="Plugin storage location:" paddingTop="6" right="0"/>
-					</s:Group>
-					<s:DropDownList dataProvider="{pluginStorageLocations}" selectedIndex="0"  width="150"/>
-				</s:HGroup>
-				<s:HGroup width="100%">
-					<s:Group width="40%">
-						<s:Label text="Allow editing:" paddingTop="5" right="0"/>
-					</s:Group>
-					<s:CheckBox selected="{allowEditing}" change="onAllowEditingChanged(event)"/>
-				</s:HGroup>
-			</s:VGroup>
-		</s:Panel>
+		<preferences:StoragePreferencesPanel id="storage" />
 	</s:VGroup>
 </s:Window>
