--- a/src/flashplayerswitcher/view/PluginStorageListing.mxml
+++ b/src/flashplayerswitcher/view/PluginStorageListing.mxml
@@ -33,6 +33,6 @@
 		<s:Button id="downloadButton" label="Download more..."/>
 		<mx:Spacer width="100%" />
 		<s:Button id="deleteButton" label="Delete" enabled="false"/>
-		<s:Button id="installButton" label="Install" enabled="false" fontWeight="bold"/>
+		<s:Button id="installButton" label="Activate" enabled="false" fontWeight="bold"/>
 	</s:HGroup>
 </s:VGroup>
